instalacion y ejecucion correcta

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,3 +1,8 @@
 {
-  "title" : "The Diet App"
+"helloWorld":  "Hello World",
+"summary": "SUMMARY",
+"productname":"Product: {{name}} {{emoji}}",
+"price":"Price: {{price}}",
+"releaseDate":"Release Date:{{date}}",
+"payNow":"PAY NOW{{total}}"
 }
