--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -1,5 +1,5 @@
 {
-  "helloWorld":  "Hola mundo",
+  "helloWorld":  "Hola Ecuador",
   "summary": "RESUMEN",
   "productname":"Producto: {{name}} {{emoji}}",
   "price":"Precio: {{price}}",
