seccion category y diseño

--- a/lib/i18n/en/strings_en.i18n.json
+++ b/lib/i18n/en/strings_en.i18n.json
@@ -2,6 +2,7 @@
   "title": "The Diet App",
   "home" : {
     "category": "Category",
+    "goToCategory": "Go to Categorys",
     "trending": "Trending",
     "recommendation": "Recommendation\nfor Diet"
   }
