--- a/lib/i18n/es/strings_es.i18n.json
+++ b/lib/i18n/es/strings_es.i18n.json
@@ -2,6 +2,7 @@
   "title": "La Dieta App",
   "home" : {
     "category": "Categorias",
+    "goToCategory": "Ver todas las Categorias",
     "trending": "Popular",
     "recommendation": "Recomendaciones \npara la Dieta"
   }
